--- a/client-app/tsconfig.json
+++ b/client-app/tsconfig.json
@@ -17,11 +17,11 @@
     "resolveJsonModule": true,
     "isolatedModules": true,
     "noEmit": true,
-    "jsx": "react",
+    "jsx": "preserve",
     "experimentalDecorators": true
-
   },
   "include": [
-    "src"
+    "src",
+    "./typings-custom/**/*.ts"
   ]
 }
